Forgot Password/Password Reset update

--- a/Project/Login/index.html
+++ b/Project/Login/index.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <title>Welcome - Empire</title>
+    <link rel="icon" type="image/png" href="../images/Logo-BrownBG.png">
+    <title>Welcome - Empire Finance Network</title>
 </head>
 
 <body>
 
-    <div class="container1">
+    <div class="container">
         <div class="login-container">
             <form>
                 <h1>Login Please</h1>
@@ -31,7 +32,7 @@
                         <input type="checkbox" class="checkbox">
                         Remember Me
                     </label>
-                    <a href="#">Forgot Password?</a>
+                    <a href="../Login/index_recovery.html">Forgot Password?</a>
                 </div>
                 <button type="submit">
                     <i class="fa-solid fa-user"></i>
@@ -40,10 +41,10 @@
             </form>
         </div>
     </div>
-    <div class="container2" id="container">
+    <div class="toggle-container" id="container">
         <div class="signUp-container">
             <h1>Welcome!</h1>
-            <p>Enter your details and start journey with us</p>
+            <p>Enter your details and start a journey with us</p>
             <button>Sign Up</button>
         </div>
     </div>
