--- a/Project/Login/index.html
+++ b/Project/Login/index.html
@@ -6,48 +6,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="icon" type="image/png" href="../images/Logo-BrownBG.png">
+    <link rel="icon" type="image/png" href="../images/Empire Finance Network logos 2/Empire Finance Network-logos_transparent resized.png">
     <title>Welcome - Empire Finance Network</title>
 </head>
 
 <body>
+    
+    <main>
+        <section>
+            <div class="container">
+                <div class="login-container">
+                    <form>
+                        <h1>Login Please</h1>
+                        <div class="input-box">
+                            <input type="text" name="userId-email" placeholder="Input your user ID or Email">
+                            <i class="fa-solid fa-envelope"></i>
+                            <p>|</p>
+                        </div>
+                        <div class="input-box">
+                            <input type="password" name="password" placeholder="Input your password">
+                            <i class="fa-solid fa-key"></i>
+                            <p>|</p>
+                        </div>
 
-    <div class="container">
-        <div class="login-container">
-            <form>
-                <h1>Login Please</h1>
-                <div class="input-box">
-                    <input type="text" name="userId-email" placeholder="Input your user ID or Email">
-                    <i class="fa-solid fa-envelope"></i>
-                    <p>|</p>
+                        <div class="remember-forgot">
+                            <label>
+                                <input type="checkbox" class="checkbox">
+                                Remember Me
+                            </label>
+                            <a href="../Login/index_recovery.html">Forgot Password?</a>
+                        </div>
+                        <button type="submit">
+                            <i class="fa-solid fa-user"></i><span></span>
+                            Log in
+                        </button>
+                    </form>
                 </div>
-                <div class="input-box">
-                    <input type="password" name="password" placeholder="Input your password">
-                    <i class="fa-solid fa-key"></i>
-                    <p>|</p>
-                </div>
+            </div>
+        </section>
 
-                <div class="remember-forgot">
-                    <label>
-                        <input type="checkbox" class="checkbox">
-                        Remember Me
-                    </label>
-                    <a href="../Login/index_recovery.html">Forgot Password?</a>
+        <section>
+            <div class="toggle-container" id="container">
+                <div class="signUp-container">
+                    <h1>Welcome!</h1>
+                    <p>Enter your details and start a journey with us</p>
+                    <button>Sign Up</button>
                 </div>
-                <button type="submit">
-                    <i class="fa-solid fa-user"></i>
-                    Log in
-                </button>
-            </form>
-        </div>
-    </div>
-    <div class="toggle-container" id="container">
-        <div class="signUp-container">
-            <h1>Welcome!</h1>
-            <p>Enter your details and start a journey with us</p>
-            <button>Sign Up</button>
-        </div>
-    </div>
+            </div>
+        </section>
+    </main>
+    
     <script src="js/script.js"></script>
 
 </body>
