--- a/Project/Login/index_passwordReset.html
+++ b/Project/Login/index_passwordReset.html
@@ -3,35 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="../images/Logo-BrownBG.png">
+    <link rel="icon" type="image/png" href="../images/Empire Finance Network logos 2/Empire Finance Network-logos_transparent resized.png">
     <link rel="stylesheet" href="../css/PasswordReset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <title>Reset Password - Empire Finance Network Support</title>
 </head>
 <body>
+    <main>
+        <section>
+            <div class="container">
+                <div class="resetPassword-container">
+                    <form>
+                        <h1>New Password</h1>
+                        <div class="input-box">
+                            <input type="password" placeholder="Create a new password">
+                            <i class="fa-solid fa-wrench"></i>
+                            <p>|</p>
+                        </div>
 
-    <div class="container">
-        <div class="resetPassword-container">
-            <form>
-                <h1>New Password</h1>
-                <div class="input-box">
-                    <input type="password" placeholder="Create a new password">
-                    <i class="fa-solid fa-wrench"></i>
-                    <p>|</p>
+                        <div class="input-box">
+                            <input type="password" placeholder="Confirm new password">
+                            <i class="fa-solid fa-wrench"></i>
+                            <p>|</p>
+                        </div>
+
+                        <button type="submit">
+                            Reset Password
+                        </button>
+                    </form>
                 </div>
-
-                <div class="input-box">
-                    <input type="password" placeholder="Confirm new password">
-                    <i class="fa-solid fa-wrench"></i>
-                    <p>|</p>
-                </div>
-
-                <button type="submit">
-                    Reset Password
-                </button>
-            </form>
-        </div>
-    </div>
+            </div>
+        </section>
+    </main>
     
 </body>
 </html>
