--- a/Project/Login/index_recovery.html
+++ b/Project/Login/index_recovery.html
@@ -4,29 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="../images/Logo-BrownBG.png">
+    <link rel="icon" type="image/png" href="../images/Empire Finance Network logos 2/Empire Finance Network-logos_transparent resized.png">
     <link rel="stylesheet" href="../css/passwordRecovery.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <title>Forgot Password - Empire Finance Network Support</title>
 </head>
 
 <body>
+    
+    <main>
+        <section>
+            <div class="container">
+                <form>
+                    <h1>Forgot Password</h1>
+                    <p>Enter your email address</p>
+                    <div class="input-box">
+                        <input type="email" name="Email" placeholder="Input your Email">
+                        <i class="fa-solid fa-envelope"></i>
+                        <p>|</p>
+                    </div>
 
-    <div class="container">
-        <form>
-            <h1>Forgot Password</h1>
-            <p>Enter your email address</p>
-            <div class="input-box">
-                <input type="email" name="Email" placeholder="Input your Email">
-                <i class="fa-solid fa-envelope"></i>
-                <p>|</p>
+                    <button type="submit">
+                        Continue
+                    </button>
+                </form>
             </div>
-
-            <button type="submit">
-                Continue
-            </button>
-        </form>
-    </div>
+        </section>
+    </main>
 
 </body>
 
