--- a/Project/Login/index_passwordReset.html
+++ b/Project/Login/index_passwordReset.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="../images/Empire Finance Network logos 2/Empire Finance Network-logos_transparent resized.png">
-    <link rel="stylesheet" href="../css/PasswordReset.css">
+    <link rel="stylesheet" href="../css/passwordReset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <title>Reset Password - Empire Finance Network Support</title>
 </head>
