Color update | Files correction | Bank View Update

--- a/Project/Login/index.html
+++ b/Project/Login/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="icon" type="image/png" href="../images/Empire Finance Network logos 2/Empire Finance Network-logos_transparent resized.png">
+    <link rel="icon" type="image/png" href="../images/Empire_Finance_Network_logos_2/Empire_Finance_Network-logos_transparent_resized.png">
     <title>Welcome - Empire Finance Network</title>
 </head>
 
