--- a/Project/Login/index_recovery.html
+++ b/Project/Login/index_recovery.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="../images/Empire Finance Network logos 2/Empire Finance Network-logos_transparent resized.png">
+    <link rel="icon" type="image/png" href="../images/Empire_Finance_Network_logos_2/Empire_Finance_Network-logos_transparent_resized.png">
     <link rel="stylesheet" href="../css/passwordRecovery.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <title>Forgot Password - Empire Finance Network Support</title>
