--- a/Project/Login/index.html
+++ b/Project/Login/index.html
@@ -45,7 +45,7 @@
             </div>
 
             <div class="hidden-container" id="hidden-container">
-                <div class="signUp-container toggle-front">
+                <div class="signUp-container">
                     <div class="form-container sign-up">
                         <form>
                             <h1>Create Account</h1>
@@ -95,7 +95,7 @@
 
         <section>
             <div class="toggle-container" id="toggle-container">
-                <div class="toggle-panel toggle-behind">
+                <div class="toggle-panel">
                     <h1>Welcome!</h1>
                     <p>Enter your details and start a journey with us</p>
                     <button id="signUp-button" onclick="showHiddenContainer()">Sign Up</button>
