--- a/Project/screens/listDashboards/bankList.html
+++ b/Project/screens/listDashboards/bankList.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="../../images/Empire_Finance_Network_logos_2/Empire_Finance_Network-logos_transparent_resized.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="../../css/viewsStyles/bankView.css">
+    <link rel="stylesheet" href="../../css/listsStyles/bankList.css">
     <title>Banks - Empire Finance Network</title>
 </head>
 <body>
@@ -80,19 +80,19 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href="../dashboards/agencyView.html">
+                            <a href="../listDashboards/agencyList.html">
                                 <span>Agency</span>
                             </a>
                         </li>
 
                         <li>
-                            <a href="../dashboards/accountView.html">
+                            <a href="../listDashboards/accountList.html">
                                 <span>Account</span>
                             </a>
                         </li>
 
                         <li>
-                            <a href="../dashboards/peopleView.html">
+                            <a href="../listDashboards/peopleList.html">
                                 <span>People</span>
                             </a>
                         </li>
