--- a/Project/screens/registrations/bankRegister.html
+++ b/Project/screens/registrations/bankRegister.html
@@ -18,7 +18,7 @@
             </div>
 
             <div class="return-button">
-                <a href="../listDashboards/bankList.html">
+                <a href="../views/bankList.html">
                     <i class="fa-solid fa-arrow-left"></i>
                     Return
                 </a>
