--- a/Project/screens/registrations/agencyRegister.html
+++ b/Project/screens/registrations/agencyRegister.html
@@ -18,7 +18,7 @@
             </div>
 
             <div class="return-button">
-                <a href="../listDashboards/agencyList.html">
+                <a href="../views/agencyList.html">
                     <i class="fa-solid fa-arrow-left"></i>
                     Return
                 </a>
