--- a/Project/screens/registrations/accountRegister.html
+++ b/Project/screens/registrations/accountRegister.html
@@ -47,6 +47,11 @@
                         <label><strong>Account Number *</strong></label>
                         <input type="text">
                     </div>
+
+                    <div class="accountHolder">
+                        <label><strong>Account Holder *</strong></label>
+                        <input type="text">
+                    </div>
                     
                     <div class="openingBalance">
                         <label><strong>Opening Balance *</strong></label>
