--- a/Project/screens/registrations/peopleRegister.html
+++ b/Project/screens/registrations/peopleRegister.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="../../css/registrationsStyles/peopleRegister.css">
     <title>People Register - Empire Finance Network</title>
 </head>
+
 <body>
 
     <header>
@@ -39,7 +41,7 @@
                         <label><strong>Date of Birth *</strong></label>
                         <input type="date">
                     </div>
-                    
+
                     <div class="cpf">
                         <label><strong>CPF *</strong></label>
                         <input type="text">
@@ -65,7 +67,7 @@
                             Cancel
                         </button>
 
-                        <button class="save">
+                        <button type="submit" class="save">
                             Save
                         </button>
                     </div>
@@ -75,4 +77,5 @@
     </main>
 
 </body>
+
 </html>
