--- a/Project/screens/registrations/bankRegister.html
+++ b/Project/screens/registrations/bankRegister.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="../../images/Empire_Finance_Network_logos_2/Empire_Finance_Network-logos_transparent_resized.png">
+    <link rel="icon" type="image/png"
+        href="../../images/Empire_Finance_Network_logos_2/Empire_Finance_Network-logos_transparent_resized.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="../../css/registrationsStyles/bankRegister.css">
     <title>Bank Register - Empire Finance Network</title>
 </head>
+
 <body>
 
     <header>
@@ -45,7 +48,7 @@
                             Cancel
                         </button>
 
-                        <button class="save">
+                        <button type="submit" class="save">
                             Save
                         </button>
                     </div>
@@ -55,4 +58,5 @@
     </main>
 
 </body>
+
 </html>
