Mobile responsiveness | Lists edit screens

--- a/Project/screens/listsEdit/peopleListEdit.html
+++ b/Project/screens/listsEdit/peopleListEdit.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="../../images/Empire_Finance_Network_logos_2/Empire_Finance_Network-logos_transparent_resized.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="../../css/registrationsStyles/agencyRegister.css">
-    <title>Agency Register - Empire Finance Network</title>
+    <link rel="stylesheet" href="../../css/listsEditStyles/peopleListEdit.css">
+    <title>People Register - Empire Finance Network</title>
 </head>
+
 <body>
 
     <header>
@@ -18,7 +20,7 @@
             </div>
 
             <div class="return-button">
-                <a href="../views/agencyList.html">
+                <a href="../views/peopleList.html">
                     <i class="fa-solid fa-arrow-left"></i>
                     Return
                 </a>
@@ -30,32 +32,42 @@
         <section>
             <div class="wrapper">
                 <form>
-                    <div class="name">
-                        <label><strong>Name *</strong></label>
+                    <div class="fullname">
+                        <label><strong>Fullname *</strong></label>
                         <input type="text" required>
                     </div>
 
-                    <div class="number">
-                        <label><strong>Number *</strong></label>
+                    <div class="birth">
+                        <label><strong>Date of Birth *</strong></label>
+                        <input type="date" required>
+                    </div>
+
+                    <div class="cpf">
+                        <label><strong>CPF *</strong></label>
                         <input type="text" required>
                     </div>
-                    
+
                     <div class="address">
                         <label><strong>Address *</strong></label>
                         <input type="text" required>
                     </div>
 
-                    <div class="code">
-                        <label><strong>Code *</strong></label>
-                        <input type="text" required>
+                    <div class="phoneNumber">
+                        <label><strong>Phone Number *</strong></label>
+                        <input type="tel" required>
+                    </div>
+
+                    <div class="email">
+                        <label><strong>Email *</strong></label>
+                        <input type="email" required>
                     </div>
 
                     <div class="confirm-cancel-buttons">
-                        <a href="../views/agencyList.html">
+                        <a href="../views/peopleList.html">
                             Cancel
                         </a>
 
-                        <button class="save">
+                        <button type="submit" class="save">
                             Save
                         </button>
                     </div>
@@ -64,7 +76,6 @@
         </section>
     </main>
 
-    <script src="../../js/registrationsScripts/agencyRegister.js"></script>
-
 </body>
+
 </html>
