--- a/Project/screens/registrations/bankRegister.html
+++ b/Project/screens/registrations/bankRegister.html
@@ -35,18 +35,18 @@
                 <form>
                     <div class="bankName">
                         <label><strong>Bank Name *</strong></label>
-                        <input type="text">
+                        <input type="text" required>
                     </div>
 
                     <div class="bankId">
                         <label><strong>Bank ID *</strong></label>
-                        <input type="text">
+                        <input type="text" required>
                     </div>
-
+                    
                     <div class="confirm-cancel-buttons">
-                        <button class="cancel">
+                        <a href="../views/bankList.html">
                             Cancel
-                        </button>
+                        </a>
 
                         <button type="submit" class="save">
                             Save
