--- a/Project/screens/registrations/peopleRegister.html
+++ b/Project/screens/registrations/peopleRegister.html
@@ -34,38 +34,38 @@
                 <form>
                     <div class="fullname">
                         <label><strong>Fullname *</strong></label>
-                        <input type="text">
+                        <input type="text" required>
                     </div>
 
                     <div class="birth">
                         <label><strong>Date of Birth *</strong></label>
-                        <input type="date">
+                        <input type="date" required>
                     </div>
 
                     <div class="cpf">
                         <label><strong>CPF *</strong></label>
-                        <input type="text">
+                        <input type="text" required>
                     </div>
 
                     <div class="address">
                         <label><strong>Address *</strong></label>
-                        <input type="text">
+                        <input type="text" required>
                     </div>
 
                     <div class="phoneNumber">
                         <label><strong>Phone Number *</strong></label>
-                        <input type="tel">
+                        <input type="tel" required>
                     </div>
 
                     <div class="email">
                         <label><strong>Email *</strong></label>
-                        <input type="email">
+                        <input type="email" required>
                     </div>
 
                     <div class="confirm-cancel-buttons">
-                        <button class="cancel">
+                        <a href="../views/peopleList.html">
                             Cancel
-                        </button>
+                        </a>
 
                         <button type="submit" class="save">
                             Save
