--- a/Project/Login/index.html
+++ b/Project/Login/index.html
@@ -6,23 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="icon" type="image/png" href="../images/Empire_Finance_Network_logos_2/Empire_Finance_Network-logos_transparent_resized.png">
+    <link rel="icon" type="image/png"
+        href="../images/Empire_Finance_Network_logos_2/Empire_Finance_Network-logos_transparent_resized.png">
     <title>Welcome - Empire Finance Network</title>
 </head>
 
 <body>
-    
+
     <main>
         <section>
             <div class="container" id="container">
                 <div class="form-container login-container toggle-left">
                     <form>
                         <h1>Login Please</h1>
+
+                        <div class="mobileSignUpRedirect">
+                            <p>Not a member yet?</p>
+                            <div class="mobileSignUpRedirectButton" id="mobileSignUpRedirect">
+                                <i class="fa-solid fa-user-plus"></i>
+                                <label>Sign up</label>
+                            </div>
+                        </div>
+
                         <div class="input-box">
                             <input type="text" name="userId-email" placeholder="Input your user ID or Email" required>
                             <i class="fa-solid fa-envelope"></i>
                             <p>|</p>
                         </div>
+
                         <div class="input-box">
                             <input type="password" name="password" placeholder="Input your password" required>
                             <i class="fa-solid fa-key"></i>
@@ -36,7 +47,8 @@
                             </label>
                             <a href="../Login/index_recovery.html">Forgot Password?</a>
                         </div>
-                        <button type="submit">
+
+                        <button type="submit" id="login-button">
                             <i class="fa-solid fa-user"></i>
                             Log in
                         </button>
@@ -103,7 +115,7 @@
             </div>
         </section>
     </main>
-    
+
     <script src="../js/script.js"></script>
 
 </body>
