--- a/Project/screens/listsEdit/bankListEdit.html
+++ b/Project/screens/listsEdit/bankListEdit.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="../../images/Empire_Finance_Network_logos_2/Empire_Finance_Network-logos_transparent_resized.png">
+    <link rel="icon" type="image/png"
+        href="../../images/Empire_Finance_Network_logos_2/Empire_Finance_Network-logos_transparent_resized.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="../../css/registrationsStyles/agencyRegister.css">
-    <title>Agency Register - Empire Finance Network</title>
+    <link rel="stylesheet" href="../../css/listsEditStyles/bankListEdit.css">
+    <title>Bank Register - Empire Finance Network</title>
 </head>
+
 <body>
 
     <header>
@@ -18,7 +21,7 @@
             </div>
 
             <div class="return-button">
-                <a href="../views/agencyList.html">
+                <a href="../views/bankList.html">
                     <i class="fa-solid fa-arrow-left"></i>
                     Return
                 </a>
@@ -30,32 +33,22 @@
         <section>
             <div class="wrapper">
                 <form>
-                    <div class="name">
-                        <label><strong>Name *</strong></label>
+                    <div class="bankName">
+                        <label><strong>Bank Name *</strong></label>
                         <input type="text" required>
                     </div>
 
-                    <div class="number">
-                        <label><strong>Number *</strong></label>
-                        <input type="text" required>
-                    </div>
-                    
-                    <div class="address">
-                        <label><strong>Address *</strong></label>
-                        <input type="text" required>
-                    </div>
-
-                    <div class="code">
-                        <label><strong>Code *</strong></label>
+                    <div class="bankId">
+                        <label><strong>Bank ID *</strong></label>
                         <input type="text" required>
                     </div>
 
                     <div class="confirm-cancel-buttons">
-                        <a href="../views/agencyList.html">
+                        <a href="../views/bankList.html">
                             Cancel
                         </a>
 
-                        <button class="save">
+                        <button type="submit" class="save">
                             Save
                         </button>
                     </div>
@@ -64,7 +57,6 @@
         </section>
     </main>
 
-    <script src="../../js/registrationsScripts/agencyRegister.js"></script>
-
 </body>
+
 </html>
