--- a/Project/screens/listsEdit/agencyListEdit.html
+++ b/Project/screens/listsEdit/agencyListEdit.html
@@ -26,10 +26,13 @@
         </div>
     </header>
 
+    <script src="../../js/listsEditScripts/agencyListEdit.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <main>
         <section>
             <div class="wrapper">
-                <form>
+                <form onsubmit="confirmRegist()">
                     <div class="name">
                         <label><strong>Name *</strong></label>
                         <input type="text" required>
@@ -55,7 +58,7 @@
                             Cancel
                         </a>
 
-                        <button class="save">
+                        <button type="submit" class="save" id="save">
                             Save
                         </button>
                     </div>
@@ -63,8 +66,6 @@
             </div>
         </section>
     </main>
-
-    <script src="../../js/registrationsScripts/agencyRegister.js"></script>
 
 </body>
 </html>
