--- a/Project/Login/index_recovery.html
+++ b/Project/Login/index_recovery.html
@@ -19,12 +19,12 @@
                     <h1>Forgot Password</h1>
                     <p>Enter your email address</p>
                     <div class="input-box">
-                        <input type="email" name="Email" placeholder="Input your Email">
+                        <input type="email" placeholder="Input your Email" required>
                         <i class="fa-solid fa-envelope"></i>
                         <p>|</p>
                     </div>
 
-                    <button type="submit">
+                    <button type="submit" id="submitButton">
                         Continue
                     </button>
                 </form>
