--- a/Project/screens/listsEdit/bankListEdit.html
+++ b/Project/screens/listsEdit/bankListEdit.html
@@ -29,10 +29,13 @@
         </div>
     </header>
 
+    <script src="../../js/listsEditScripts/bankListEdit.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <main>
         <section>
             <div class="wrapper">
-                <form>
+                <form onsubmit="confirmRegist()">
                     <div class="bankName">
                         <label><strong>Bank Name *</strong></label>
                         <input type="text" required>
@@ -48,7 +51,7 @@
                             Cancel
                         </a>
 
-                        <button type="submit" class="save">
+                        <button type="submit" class="save" id="save">
                             Save
                         </button>
                     </div>
