chore(lists): fixes tables and registers titles
remove tables column which would be used to show the
foreign key that links the tables

change register titles which was not specifying the
registration screens

feat(foreign-key): add selects for the foreign key

add selects to registration, edit and preview screens to
link the tables with foreign keys

--- a/Project/screens/listsEdit/accountListEdit.html
+++ b/Project/screens/listsEdit/accountListEdit.html
@@ -13,8 +13,8 @@
     <header>
         <div class="header-content">
             <div class="title">
-                <h4>Registers/Referral</h4>
-                <h1>Referral</h1>
+                <h4>Registers/Edit</h4>
+                <h1>Account</h1>
             </div>
 
             <div class="return-button">
@@ -33,6 +33,18 @@
         <section>
             <div class="wrapper">
                 <form onsubmit="confirmRegist()">
+                    <div class="agencies">
+                        <label><strong>Agency *</strong></label>
+                        <select id="accountTypeDropdown" required>
+                            <option class="dropdownHolder" disabled selected>Choose an option</option>
+                            <option>Central FinanCity</option>
+                            <option>First Capital</option>
+                            <option>Financial Hub</option>
+                            <option>Unity Plaza</option>
+                            <option>Digital Nexus</option>
+                        </select>
+                    </div>
+
                     <div class="accountType">
                         <label><strong>Account Type *</strong></label>
                         <select id="accountTypeDropdown" required>
