--- a/Project/screens/listsEdit/bankListEdit.html
+++ b/Project/screens/listsEdit/bankListEdit.html
@@ -8,7 +8,7 @@
         href="../../images/Empire_Finance_Network_logos_2/Empire_Finance_Network-logos_transparent_resized.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="../../css/listsEditStyles/bankListEdit.css">
-    <title>Bank Register - Empire Finance Network</title>
+    <title>Bank Edit - Empire Finance Network</title>
 </head>
 
 <body>
@@ -16,8 +16,8 @@
     <header>
         <div class="header-content">
             <div class="title">
-                <h4>Registers/Referral</h4>
-                <h1>Referral</h1>
+                <h4>Registers/Edit</h4>
+                <h1>Bank</h1>
             </div>
 
             <div class="return-button">
@@ -41,8 +41,8 @@
                         <input type="text" required>
                     </div>
 
-                    <div class="bankId">
-                        <label><strong>Bank ID *</strong></label>
+                    <div class="bankCode">
+                        <label><strong>Bank Code *</strong></label>
                         <input type="text" required>
                     </div>
 
