--- a/Project/screens/previews/accountPreview.html
+++ b/Project/screens/previews/accountPreview.html
@@ -30,6 +30,17 @@
         <section>
             <div class="wrapper">
                 <form>
+                    <div class="agencies">
+                        <label><strong>Agency *</strong></label>
+                        <select id="agenciesDropdown" disabled>
+                            <option>Central FinanCity</option>
+                            <option>First Capital</option>
+                            <option>Financial Hub</option>
+                            <option>Unity Plaza</option>
+                            <option>Digital Nexus</option>
+                        </select>
+                    </div>
+
                     <div class="accountType">
                         <label><strong>Account Type *</strong></label>
                         <select id="accountTypeDropdown" disabled>
