--- a/Project/screens/previews/bankPreview.html
+++ b/Project/screens/previews/bankPreview.html
@@ -35,8 +35,8 @@
                         <input type="text" disabled>
                     </div>
 
-                    <div class="bankId">
-                        <label><strong>Bank ID *</strong></label>
+                    <div class="bankCode">
+                        <label><strong>Bank Code *</strong></label>
                         <input type="text" disabled>
                     </div>
                 </form>
