--- a/Project/screens/previews/peoplePreview.html
+++ b/Project/screens/previews/peoplePreview.html
@@ -30,6 +30,17 @@
         <section>
             <div class="wrapper">
                 <form>
+                    <div class="accountsNumber">
+                        <label><strong>Account Number *</strong></label>
+                        <select id="accountsNumberDropdown" disabled>
+                            <option>#</option>
+                            <option>#</option>
+                            <option>#</option>
+                            <option>#</option>
+                            <option>#</option>
+                        </select>
+                    </div>
+
                     <div class="fullname">
                         <label><strong>Fullname *</strong></label>
                         <input type="text" disabled>
