--- a/Project/screens/previews/agencyPreview.html
+++ b/Project/screens/previews/agencyPreview.html
@@ -30,6 +30,17 @@
         <section>
             <div class="wrapper">
                 <form>
+                    <div class="banks">
+                        <label><strong>Banks *</strong></label>
+                        <select id="accountTypeDropdown" disabled>
+                            <option>Brazilian Bank</option>
+                            <option>GuBank</option>
+                            <option>Moonbank</option>
+                            <option>Polar Bank</option>
+                            <option>JJJ Bank</option>
+                        </select>
+                    </div>
+
                     <div class="name">
                         <label><strong>Name *</strong></label>
                         <input type="text" disabled>
@@ -46,7 +57,7 @@
                     </div>
 
                     <div class="code">
-                        <label><strong>Code *</strong></label>
+                        <label><strong>ID *</strong></label>
                         <input type="text" disabled>
                     </div>
                 </form>
