--- a/Project/screens/registrations/bankRegister.html
+++ b/Project/screens/registrations/bankRegister.html
@@ -16,8 +16,8 @@
     <header>
         <div class="header-content">
             <div class="title">
-                <h4>Registers/Referral</h4>
-                <h1>Referral</h1>
+                <h4>Registers</h4>
+                <h1>Bank</h1>
             </div>
 
             <div class="return-button">
@@ -41,8 +41,8 @@
                         <input type="text" required>
                     </div>
 
-                    <div class="bankId">
-                        <label><strong>Bank ID *</strong></label>
+                    <div class="bankCode">
+                        <label><strong>Bank Code *</strong></label>
                         <input type="text" required>
                     </div>
                     
